--- a/server/public/sass/master.scss
+++ b/server/public/sass/master.scss
@@ -16,7 +16,7 @@ input:-webkit-autofill {
 }
 
 .clear-nav {
-  padding-top: 70px;
+  padding-top: 60px;
 }
 
 .bottom-margin-25 {
@@ -32,7 +32,7 @@ input:-webkit-autofill {
 }
 
 .img-wrapper {
-  background-color: rgba(0,0,0,0.7);
+  background-color: rgba(0,0,0,0.6);
   height: 100%;
   width: 100%;
 }
